# flow.sh

./: .gitignore  pyproject.toml  readme.md
src/flowsh/: main.py
src/flowsh/css/: flowsh.css
tests/textual_examples/: stopwatch.css  stopwatch.py
