[tool.poetry]
name = "centered-tui"
version = "0.1.0"
description = ""
authors = ["jjmachan <jamesjithin97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.1.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
