[project]
name = "flowsh"
dependencies = [
    "textual",
]
dynamic = ["version", "readme"]

[project.scripts]
flowsh = "flowsh.main:main"
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/plain"}

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/flowsh/_version.py"
